--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/mob-appl-develop-cent/ETMP-Assignment1#readme",
   "dependencies": {
-    "seneca": "^3.7.0"
+    "express": "^4.16.3"
   }
 }
