Some variables and code otimization

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/mob-appl-develop-cent/ETMP-Assignment1#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "consign": "^0.1.6",
     "express": "^4.16.3"
   }
