--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Develop Node.js http server to store and retrieve product information using HTTP GET and POST requests and JSON data format.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
